<resources>
    <string name="app_name">Thesis Native</string>
    <string name="main_title">Thesis benchmarking</string>

    <string name="android_logo">Android robot logo</string>

    <string name="tool_name">Android SDK</string>
    <string name="select_test_prompt">Select test</string>


    <string name="test_button_latency_name">Button latency</string>
    <string name="test_local_listview_name">Local listview</string>
    <string name="test_network_listview_name">Network listview</string>
    <string name="test_heavy_computation_name">Heavy computation</string>
    <string name="test_vibration_latency_name">Vibration latency</string>
    <string name="test_not_implemented">Test not implemented</string>
    <string name="third_party_notices_name">Third party notices</string>
    <string name="click_me">Click me!</string>

    <string name="test_state_idle">Click the button to start</string>
    <string name="test_state_computing">Computing…</string>
    <string name="test_state_done">Done</string>
    <string name="error_loading_listitem_data">Error loading data %1$s</string>
    <string name="go_back_without_animation">Go back without animation</string>
</resources>
