<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_graph.xml"
    app:startDestination="@id/selectTestFragment">

    <fragment
        android:id="@+id/selectTestFragment"
        android:name="fi.jara.thesis.thesisnative.SelectTestFragment"
        android:label="@string/main_title" >
        <action
            android:id="@+id/open_button_latency_screen"
            app:destination="@id/buttonLatencyTest" />
        <action
            android:id="@+id/open_filesystem_listitems_screen"
            app:destination="@id/localListItemsTest">
        </action>
        <action
            android:id="@+id/open_network_listitems_screen"
            app:destination="@id/networkListItemsTest">
        </action>
        <action
            android:id="@+id/open_vibration_latency_screen"
            app:destination="@id/vibrationLatencyTest" />
        <action
            android:id="@+id/open_heavy_computation_screen"
            app:destination="@id/computationTest" />
        <action
            android:id="@+id/open_third_party_notices_screen"
            app:destination="@id/thirdPartyNoticesScreen" />
    </fragment>
    <fragment
        android:id="@+id/buttonLatencyTest"
        android:name="fi.jara.thesis.thesisnative.buttonlatency.ButtonLatencyFragment"
        android:label="@string/test_button_latency_name" />
    <fragment
        android:id="@+id/localListItemsTest"
        android:name="fi.jara.thesis.thesisnative.listitems.ListItemsFragment"
        android:label="@string/test_local_listview_name">
        <argument
            android:name="useNetwork"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>
    <fragment
        android:id="@+id/networkListItemsTest"
        android:name="fi.jara.thesis.thesisnative.listitems.ListItemsFragment"
        android:label="@string/test_network_listview_name">
        <argument
            android:name="useNetwork"
            app:argType="boolean"
            android:defaultValue="true" />
    </fragment>
    <fragment
        android:id="@+id/computationTest"
        android:name="fi.jara.thesis.thesisnative.computation.ComputationFragment"
        android:label="@string/test_heavy_computation_name" />
    <fragment
        android:id="@+id/vibrationLatencyTest"
        android:name="fi.jara.thesis.thesisnative.vibration.VibrationFragment"
        android:label="@string/test_vibration_latency_name" />
    <fragment
        android:id="@+id/thirdPartyNoticesScreen"
        android:name="fi.jara.thesis.thesisnative.ThirdPartyNoticesFragment"
        android:label="@string/third_party_notices_name" />
</navigation>